# advent_of_code

./: README.md  pyproject.toml
src/: day_1.py
tests/: test_days.py
tests/data/: day_1_by_line_exp.txt  day_1_inp.txt
